examples/test_package/Double_dc_no_tool/steps/benchzebra_precise_run5/#test_results_result.txt
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.% Problog Inference Result：
zebra([house(norwegian,yellow,water,kools,fox), house(ukrainian,blue,tea,chesterfields,horse), house(english,red,milk,winstons,snail), house(spanish,ivory,orange,lucky_strikes,dog), house(japanese,green,coffee,parliaments,zebra)]) = 1.0000